...
    <PagerView
      ref={pagerRef}
      style={styles.pagerView}
      initialPage={initialPageIndex}
      onPageSelected={handlePageSelected}
      onPageScrollStateChanged={handlePageScrollStateChanged}
      testID={pages.length >= 3 ? 'topic-pager-ready' : 'topic-pager-loading'}
      offscreenPageLimit={1}
    >
      {pages}
    </PagerView>
  );
}
...
